   HBASE-6460  hbck "-repairHoles" usage inconsistent with "-fixHdfsOrphans" (Jie Huang)
   HBASE-6507 [hbck] TestHBaseFsck ran into TableNotEnabledException
   HBASE-6552 TestAcidGuarantees system test should flush more aggresively (Gregory Chanan)
   HBASE-6512 Incorrect OfflineMetaRepair log class name (Liang Xie)

  IMPROVEMENTS
   HBASE-5592  Make it easier to get a table from shell (Ben West)
   HBASE-5588  Deprecate/remove AssignmentManager#clearRegionFromTransition
   HBASE-5589  Add of the offline call to the Master Interface
   HBASE-5436  Right-size the map when reading attributes (Benoit)
   HBASE-5533  Add more metrics to HBase (Shaneal Manek)
   HBASE-5734  Change hbck sideline root (Jimmy Xiang)
   HBASE-5656  LoadIncrementalHFiles createTable should detect and set compression algorithm(Cosmin Lehene)
   HBASE-5712  Parallelize load of .regioninfo files in diagnostic/repair portion of hbck
   HBASE-5887  Make TestAcidGuarantees usable for system testing
   HBASE-5973  Add ability for potentially long-running IPC calls to abort if client disconnects.
   HBASE-6001  Upgrade slf4j to 1.6.1 (Jimmy Xiang)
   HBASE-6034  Upgrade Hadoop dependencies
   HBASE-6023  Normalize security audit logging level with Hadoop
   HBASE-6013  Polish sharp edges from CopyTable
   HBASE-6077  Document the most common secure RPC troubleshooting resolutions
   HBASE-6097  TestHRegion.testBatchPut is flaky on 0.92 (Gregory Chanan)
   HBASE-6107  Distributed log splitting hangs even there is no task under /hbase/splitlog
   HBASE-6114  CacheControl flags should be tunable per table schema per CF
   HBASE-4720  Implement atomic update operations (checkAndPut, checkAndDelete) for REST client/server
               (Mubarak Seyed and Jimmy Xiang)
   HBASE-5892  [hbck] Refactor parallel WorkItem* to Futures (Andrew Wang)
   HBASE-6067  HBase won't start when hbase.rootdir uses ViewFileSystem
   HBASE-6173  hbck check specified tables only