@@ -102,6 +102,7 @@ Release 0.92.2 - Unreleased
    HBASE-6507 [hbck] TestHBaseFsck ran into TableNotEnabledException
    HBASE-6552 TestAcidGuarantees system test should flush more aggresively (Gregory Chanan)
    HBASE-6512 Incorrect OfflineMetaRepair log class name (Liang Xie)
+   HBASE-6565 Coprocessor exec result Map is not thread safe (Yuan Kang)
 
   IMPROVEMENTS
    HBASE-5592  Make it easier to get a table from shell (Ben West)
